<resources>
    <string name="app_name">File Manager</string>
    <string name="action_settings">Settings</string>
    <string name="btn_back">Back</string>
    <string name="btn_local">Local storage</string>
    <string name="btn_sd">TF card</string>
    <string name="btn_paste">Paste</string>
    <string name="pop_delete">Delete</string>
    <string name="pop_rename">Rename</string>
    <string name="pop_copy">Copy</string>
    <string name="pop_cut">Cut</string>
    <string name="sd_card_null">Undetected external memory card</string>
    <string name="exit_app">Press the exit program again</string>
    <string name="input_name">Please enter a name that needs to be changed</string>
    <string name="rename_success">Modification successfully</string>
    <string name="rename_failure">Modification failed</string>
    <string name="delete_success">Delete successfully</string>
    <string name="delete_failure">Modification failed</string>
    <string name="delete">Delete</string>
    <string name="really_delete">Are you sure you want to delete it?</string>
    <string name="operation_file">Operation file</string>
    <string name="cannot_copy_file_to_here">Cannot copy to this address</string>
    <string name="cannot_delete_file_to_here">Delete failed. The address cannot be deleted</string>
    <string name="perform_operation">The operation is in progress, please wait a moment!</string>
    <string name="paste_success">Successful execution</string>
    <string name="paste_failure">Operation failed</string>
    <string name="cannot_open_file">Unable to open this type of file</string>
    <string name="unable_open_directory">Unable to open the directory</string>
    <string name="name_cannot_empty">The name cannot be empty</string>
    <string name="name_already_exists">The name already exists.</string>
    <string name="please_input_name">Please enter a name that needs to be modified</string>
    <string name="same_directory">Cut failed. The content already exists in the current directory</string>
    <string name="btn_canal">Canal</string>
    <string name="home_external_path">External storage</string>
    <string name="home_internal_storage">Internal storage</string>
</resources>
